- renamed theme.xml to theme_info.xml - corrected exception message 9+10 - deleted theme.xml, welcome.tpl - added ModuleHeading + ModuleHeadingSmall to admin.css

--- a/themes/core/exceptions/exception-10.html
+++ b/themes/core/exceptions/exception-10.html
@@ -1,6 +1,6 @@
 <p>
     The following directories are not writable by the webserver:
-    <br />/cache/templates
+    <br />/cache/cache
     <br />/cache/templates_c
 </p>
 
