--- a/themes/core/exceptions/exception-9.html
+++ b/themes/core/exceptions/exception-9.html
@@ -1,6 +1,6 @@
 <p>
     The following directories do not exist:
-    <br />/cache/templates
+    <br />/cache/cache
     <br />/cache/templates_c
 </p>
 
