- modified exception class to support placeholders for exceptions with rapid development links (exception-dev-*.html) Ticket: 145

--- a/themes/core/exceptions/exception-dev-3.html
+++ b/themes/core/exceptions/exception-dev-3.html
@@ -1,3 +1,3 @@
 <p>
-    <a href="<!-- @todo http://www.clansuite.com/trac/ticket/145 -->">Create the module with the modulebuilder</a>
+    <a href="index.php?mod=modulemanager&sub=admin&action=create&modulename={$modulename}&classname={$classname}">Create the module ( {$modulename} ) with the modulebuilder now.</a>
 </p>
