--- a/themes/core/exceptions/exception-dev-1.html
+++ b/themes/core/exceptions/exception-dev-1.html
@@ -1,3 +1,3 @@
 <p>
-    <a href="index.php?mod=modulemanager&sub=admin&action=create&modulename={$modulename}&newaction={$actionname}">Create the action for the module ( {$modulename} ) with the modulebuilder now.</a>
+    <a href="@todo link to manual/ to be written">Please set the pieces of information of your Database Connection correctly.</a>
 </p>
