- links changed to cdn/support
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@4728 34db09b4-2314-0410-a940-aec02a7c051d

--- a/themes/core/exceptions/exception-dev-30.html
+++ b/themes/core/exceptions/exception-dev-30.html
@@ -15,5 +15,5 @@ The obligatory Elements to describe the Formelement are:
 
 <h3>Additional Help</h3>
 For additional help you might consult the developer manual.
-<a target="_blank" href="http://www.clansuite.com/documentation/developer/manual/de/#_clansuite_form">Documentation &raquo; Developer-Manual &raquo Clansuite Framework &raquo Clansuite_Form</a>
+<a target="_blank" href="http://docs.clansuite.com/developer/manual/de/#_clansuite_form">Documentation &raquo; Developer-Manual &raquo Clansuite Framework &raquo Clansuite_Form</a>
 </pre>
