- exception text update

--- a/themes/core/exceptions/exception-dev-1.html
+++ b/themes/core/exceptions/exception-dev-1.html
@@ -1,3 +1,5 @@
 <p>
-    <a href="@todo link to manual/ to be written">Please set the pieces of information of your Database Connection correctly.</a>
+    Please set the pieces of information of your Database Connection correctly.
+    Try to disable configuration staging by setting [config] staging = 0 in /configuration/clansuite.config.php.
+    Then adjust your Database Connection Information in the section [database].
 </p>
