- renamed smarty compile dir from "templates_c" to "tpl_compile" - renamed smarty cache dir from "cache" to "tpl_cache"

--- a/themes/core/exceptions/exception-10.html
+++ b/themes/core/exceptions/exception-10.html
@@ -1,16 +1,16 @@
 <p>
     The following directories are not writable by the webserver:
-    <br />/cache/cache
-    <br />/cache/templates_c
+    <br />/cache/tpl_cache
+    <br />/cache/tpl_compile
 </p>
 
 <p>
     Please correct the directory permissons by executing:
     <br />
     <em>
-    chmod 777 /cache/cache
+    chmod 777 /cache/tpl_cache
     <br />
-    chmod 777 /cache/templates_c
+    chmod 777 /cache/tpl_compile
     </em>
     <br />
     before continuing.
