--- a/themes/core/exceptions/exception-9.html
+++ b/themes/core/exceptions/exception-9.html
@@ -1,16 +1,16 @@
 <p>
     The following directories do not exist:
-    <br />/cache/cache
-    <br />/cache/templates_c
+    <br />/cache/tpl_cache
+    <br />/cache/tpl_compile
 </p>
 
 <p>
     Please create the follwing directories:
     <br />
     <em>
-    /cache/cache
+    /cache/tpl_cache
     <br />
-   /cache/templates_c
+   /cache/tpl_compile
     </em>
     <br />
     before continuing.
